--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.2",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "layout": "^2.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
