--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
     "layout": "^2.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux": "^5.0.1",
     "toolkit": "^1.5.4"
